[package]
name = "pcap"
version = "0.5.5"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "A packet capture API around pcap/wpcap"
keywords = ["pcap", "packet", "sniffing"]
readme = "README.md"
homepage = "https://github.com/ebfull/pcap"
repository = "https://github.com/ebfull/pcap"
documentation = "https://ebfull.github.io/pcap/"
license = "MIT OR Apache-2.0"
#links = "pcap-1.7.4-glibc"
build = "build.rs"

#[target.x86_64-unknown-linux-musl]
#rustc-link-search = ["/tmp/pcap-static/lib/"]
#rustc-link-lib = ["pcap"]

#[target.x86_64-unknown-linux-gnu]
#rustc-link-search = ["."]
#rustc-link-lib = ["pcap-1.7.4-glibc"]

[dependencies]
libc = "0.2.7"

[lib]
name = "pcap"

[[example]]
name = "listenlocalhost"
path = "examples/listenlocalhost.rs"

[[example]]
name = "getdevices"
path = "examples/getdevices.rs"

[[example]]
name = "easylisten"
path = "examples/easylisten.rs"

[[example]]
name = "savefile"
path = "examples/savefile.rs"

[[example]]
name = "getstatistics"
path = "examples/getstatistics.rs"
